--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "author": "Anjar Wicaksono",
   "license": "MIT",
   "dependencies": {
+    "callsite": "^1.0.0",
     "express": "^4.16.3"
   }
 }
